# cFinalProject

./: CMakeLists.txt  README.md  compile_commands.json  flake.nix  main.c  main.c.bak  main.c.bakk  main.c.bakkk  main.c.bakkkk  main.c.bakkkkkk
.cache/clangd/index/: 2Dframework.h.4A47661FAF72E1C5.idx  aabb2d.c.0AAB87AA677AA99E.idx  aabb2d.h.3D2709951AF1FEE5.idx  aabb2d.h.9D3D7A12028809E7.idx  adler32.c.75E47F57FE0ECA0B.idx  afadjust.c.4917CEAD539A4EB8.idx  afadjust.h.D87592B93E5AD645.idx  afblue.c.7269CA7063438036.idx  afblue.h.F4B76057FFA06D3C.idx  afcjk.c.627010DFD5C8D09C.idx  afcjk.h.FF134C415C19C94F.idx  afcover.h.1AFA69613BE6C780.idx  afdummy.c.3A1F008EFA2AB75B.idx  afdummy.h.818296E8B9500EF6.idx  aferrors.h.817140807616C2B9.idx  affine-mat.h.ED44F3D17E9CB9CC.idx  affine-post.h.D73605ED7C868B0D.idx  affine-pre.h.CC34F06062EF73A9.idx  affine.c.259277B172D1F3AE.idx  affine.h.4DAEEFCA3B97258D.idx  affine.h.699B3508A248BE29.idx  affine.h.B45BA05A885E0AF7.idx  affine2d.c.1C5476134F9F90A6.idx  affine2d.h.4CA17CC13399C98F.idx  affine2d.h.F51DE0244C21DE5D.idx  afglobal.c.9473260544B19A35.idx  afglobal.h.144C10CE987A95A1.idx  afgsub.c.A5E9A8DC62282848.idx  afgsub.h.89FEAD08E88173BD.idx  afhints.c.4D162768935BD2EC.idx  afhints.h.22F489C1457058A7.idx  afindic.c.275ADEC615B4420A.idx  afindic.h.02B5D842E95CD128.idx  aflatin.c.6EEE911508AF5B4A.idx  aflatin.h.53260352AD13BB6B.idx  afloader.c.DC64FFCB4C97587F.idx  afloader.h.422263C2AE34A01D.idx  afmodule.c.AC725369B0606732.idx  afmodule.h.A621C6AC16123D85.idx  afmparse.c.63C03DB0F9FC25CE.idx  (+577 more)
.github/workflows/: c-cpp.yml
2Dframework/: CMakeLists.txt
2Dframework/include/2Dframework/: 2Dframework.h  background.h  entity.h  gameObject.h  ground.h  player.h  world.h
2Dframework/randerer/: CMakeLists.txt
2Dframework/randerer/baseLibs/glad/include/glad/: glad.h
2Dframework/randerer/baseLibs/glad/src/: glad.c
2Dframework/randerer/baseLibs/stb/: CMakeLists.txt
2Dframework/randerer/cmake/: embed_file.cmake  embed_shader.cmake
2Dframework/randerer/include/randerer/: camera.h  charmap.h  font.h  mesh.h  randerer.h  shader.h  texture.h  window.h
2Dframework/randerer/src/: camera.c  charmap.c  font.c  mesh.c  randerer.c  shader.c  texture.c  window.c
2Dframework/shaders/: fragment.glsl  vertex.glsl
2Dframework/shaders/background/: vertex.glsl
2Dframework/shaders/gameObject/: fragment.glsl  vertex.glsl
2Dframework/src/: background.c  entity.c  gameObject.c  ground.c  player.c  world.c
flakeAssets/nvim/: base.nix  c_cpp.nix  git.nix  opengl.nix  zsh.nix
flakeAssets/pkgs/: c_cpp.nix  git.nix  glfw.nix
